# Mock-Python-Interpreter

./: ArithExpr.cpp  ArithExpr.hpp  CMakeLists.txt  Descriptor.cpp  Descriptor.hpp  Functions.cpp  Functions.hpp  Makefile  Parser.cpp  Parser.hpp  README.txt  Range.cpp  Range.hpp  Statements.cpp  Statements.hpp  SymTab.cpp  SymTab.hpp  Testlist.cpp  Testlist.hpp  Token.cpp  Token.hpp  Tokenizer.cpp  Tokenizer.hpp  input1.py  input2.py  input3.py  input4.py  input5.py  inputExpressions.txt  main.cpp
